[gd_scene load_steps=8 format=3 uid="uid://cbuu63odfviuv"]

[ext_resource type="Script" uid="uid://v3wdg7t6a861" path="res://assets/scripts/random_menu.gd" id="1_aq8lu"]
[ext_resource type="Texture2D" uid="uid://40vnf4gik7c8" path="res://assets/puzzles/AdobeStock_104619688.jpeg" id="2_vdqvg"]
[ext_resource type="Texture2D" uid="uid://biax1h17lnus3" path="res://assets/puzzles/new_background.jpg" id="3_mx5q3"]
[ext_resource type="FontFile" uid="uid://7d4dtbjia36x" path="res://assets/fonts/KiriFont.ttf" id="4_d58bj"]
[ext_resource type="Theme" uid="uid://0xk2aimn5x6r" path="res://assets/themes/main_menu_buttons.tres" id="5_ftyle"]
[ext_resource type="AudioStream" uid="uid://d4llfcne3eq2l" path="res://assets/sounds/finger-snap-179180.mp3" id="6_jpntb"]

[sub_resource type="LabelSettings" id="LabelSettings_75luh"]
font = ExtResource("4_d58bj")
font_size = 100
font_color = Color(0.941176, 0.67451, 0.0431373, 1)
outline_size = 15
outline_color = Color(0.305882, 0.176471, 0.109804, 1)
shadow_size = 30
shadow_color = Color(0.419608, 0.294118, 0.196078, 1)
shadow_offset = Vector2(5, 5)

[node name="Menu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_aq8lu")

[node name="background texture" type="Sprite2D" parent="."]
position = Vector2(1012, 603.125)
scale = Vector2(0.388011, 0.343116)
texture = ExtResource("2_vdqvg")

[node name="new background" type="TextureRect" parent="."]
layout_mode = 0
offset_left = -93.0
offset_top = -64.0
offset_right = 2124.0
offset_bottom = 1270.0
texture = ExtResource("3_mx5q3")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 0
offset_left = 600.0
offset_top = 71.0
offset_right = 1353.0
offset_bottom = 1085.0
pivot_offset = Vector2(307, 718)
theme_override_constants/separation = 50
alignment = 1

[node name="title" type="Label" parent="VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 100
text = "Jigsaw
Puzzle"
label_settings = SubResource("LabelSettings_75luh")
horizontal_alignment = 1

[node name="select 10" type="Button" parent="VBoxContainer"]
custom_minimum_size = Vector2(0, 90)
layout_mode = 2
theme = ExtResource("5_ftyle")
theme_override_font_sizes/font_size = 50
text = "10 Piece Puzzle"

[node name="select 100" type="Button" parent="VBoxContainer"]
custom_minimum_size = Vector2(0, 90)
layout_mode = 2
theme = ExtResource("5_ftyle")
theme_override_font_sizes/font_size = 50
text = "100 Piece Puzzle"

[node name="select 1000" type="Button" parent="VBoxContainer"]
custom_minimum_size = Vector2(0, 90)
layout_mode = 2
theme = ExtResource("5_ftyle")
theme_override_font_sizes/font_size = 50
text = "1000 Piece Puzzle"

[node name="suprise me" type="Button" parent="VBoxContainer"]
custom_minimum_size = Vector2(0, 90)
layout_mode = 2
theme = ExtResource("5_ftyle")
theme_override_font_sizes/font_size = 50
text = "Suprise Me!!!"

[node name="back" type="Button" parent="VBoxContainer"]
custom_minimum_size = Vector2(0, 90)
layout_mode = 2
theme = ExtResource("5_ftyle")
theme_override_font_sizes/font_size = 50
text = "Back to Main Menu"

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource("6_jpntb")

[node name="Label" type="Label" parent="."]
visible = false
layout_mode = 0
offset_left = 25.0
offset_top = 19.0
offset_right = 220.0
offset_bottom = 101.0
theme_override_font_sizes/font_size = 50
text = "Debug"

[connection signal="pressed" from="VBoxContainer/select 10" to="." method="_on_select_10_pressed"]
[connection signal="pressed" from="VBoxContainer/select 100" to="." method="_on_select_100_pressed"]
[connection signal="pressed" from="VBoxContainer/select 1000" to="." method="_on_select_1000_pressed"]
[connection signal="pressed" from="VBoxContainer/suprise me" to="." method="_on_suprise_me_pressed"]
[connection signal="pressed" from="VBoxContainer/back" to="." method="_on_back_pressed"]
